--- a/4.html
+++ b/4.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WEB1 - CSS</title>
+    <title>WEB1 - HTML</title>
     <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="needthing.html">WEB</a></h1>
     <ol> 
         <li> <a href="1.html">HTML</a></li>
         <li> <a href="2.html">CSS</a></li>
@@ -13,13 +13,8 @@
         <li> <a href="4.html">Readme</a></li>
     </ol>
 
-    <h2>CSS란 무엇인가?</h2>
-    <p>
-        <img src="AI.jpg" width="45%">
-        나는 CSS ㅎㅎ
-
-
-        
+    <h2>HTML 필요한 정보</h2>
+    <p> 
     </p>
 </body>
 </html>
