--- a/3.html
+++ b/3.html
@@ -10,10 +10,16 @@
         <li> <a href="1.html">HTML</a></li>
         <li> <a href="2.html">CSS</a></li>
         <li> <a href="3.html">JavaScript</a></li>
+        <li> <a href="4.html">Readme</a></li>
     </ol>
     <h2>JavaScript란 무엇인가?</h2>
+    
     <p>
-        나는 JavaScript ㅎㅎ     
+        나는 JavaScript ㅎㅎ
+        <input type="checkbox">     
+    </p>
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YlaBJE4tDJw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </p>
 </body>
 </html>
