--- a/1.html
+++ b/1.html
@@ -3,6 +3,81 @@
 <head>
     <title>WEB1 - HTML</title>
     <meta charset="utf-8">
+    <style>
+        body{
+            margin:0;
+        }
+        a{
+            color : black;
+            text-decoration: none;
+        }
+        h1 {
+            font-size : 70px;
+            text-align: center;
+            border-bottom:2px solid gray;
+            margin:0;
+            padding:20px;
+        }
+        #grid ol{
+            border-right:2px solid gray;
+            width:100px;
+            margin:0;
+            padding:32px;
+        }
+        #grid{
+            display: grid;
+            grid-template-columns: 150px 1fr;
+        }
+        #article{
+            padding-left : 25px;
+
+        }
+        #active{
+            font-weight: bold;
+        }
+        
+    </style>
+</head>
+<body>
+    <h1><a href="index.html">WEB</a></h1>
+<div id="grid">
+    <ol> 
+        <li> <a href="1.html" id="active" >HTML</a></li>
+        <li> <a href="2.html" >CSS</a></li>
+        <li> <a href="3.html">JavaScript</a></li>
+        <li> <a href="4.html">Readme</a></li>
+    </ol>
+    <div id="article">
+        <h2>HTML이란 무엇인가?</h2>
+        <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">Hypertext Markup language (HTML)</a> is the standard
+        markup language for <strong>creating <u>web</u>
+        pages</strong> and web applications.Web browsers receive
+        HTML documents from a web server or from local storage and 
+        render them into multimedia web pages. HTML describes the structure 
+        of a web page semantically and originally included 
+        cues for the appearance of the document.
+        <img src="coding.jpg" width="35%">
+        </p>
+        <p style="margin-top:45px;">HTMl elements are the building blocks of HTML
+        pages. With HTML constructs, images and other objects, such as 
+        interactive forms, may be embeded into the rendered page. 
+        It provides a means to create structured documents by denoting 
+        structural semantics for text such as headings, paragraphs, lists, 
+        links, quotes and other items. 
+        HTML elements are delineated by tags, written using angle brackets.
+        </p>    
+        
+    </div>
+</div>
+</body>
+</html>
+
+
+<!-- <!DOCTYPE html>
+<html>
+<head>
+    <title>WEB1 - HTML</title>
+    <meta charset="utf-8">
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
@@ -31,21 +106,5 @@
        links, quotes and other items. 
        HTML elements are delineated by tags, written using angle brackets.
     </p>
-
-    <table>
-        <tr>
-            <td>head</td>
-            <td>98.1%</td>
-            <td>useful</td>
-        </tr>
-        <tr>
-            <td>body</td>
-            <td>97.9%</td>
-        </tr>
-        <tr>
-            <td>html</td>
-            <td>97.9%</td>
-        </tr>
-    </table>
 </body>
-</html>
+</html> -->
