--- a/2.html
+++ b/2.html
@@ -3,23 +3,59 @@
 <head>
     <title>WEB1 - CSS</title>
     <meta charset="utf-8">
+    <style>
+        body{
+            margin:0;
+        }
+        a{
+            color : black;
+            text-decoration: none;
+        }
+        h1 {
+            font-size : 70px;
+            text-align: center;
+            border-bottom:2px solid gray;
+            margin:0;
+            padding:20px;
+        }
+        #grid ol{
+            border-right:2px solid gray;
+            width:100px;
+            margin:0;
+            padding:32px;
+        }
+        #grid{
+            display: grid;
+            grid-template-columns: 150px 1fr;
+        }
+        #article{
+            padding-left : 25px;
+
+        }
+        #active{
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
+<div id="grid">
     <ol> 
-        <li> <a href="1.html">HTML</a></li>
-        <li> <a href="2.html">CSS</a></li>
+        <li> <a href="1.html" >HTML</a></li>
+        <li> <a href="2.html" id="active" >CSS</a></li>
         <li> <a href="3.html">JavaScript</a></li>
         <li> <a href="4.html">Readme</a></li>
     </ol>
-
-    <h2>CSS란 무엇인가?</h2>
-    <p>
-        <img src="AI.jpg" width="45%">
-        나는 CSS ㅎㅎ
-
-
-        
-    </p>
+    <div id="article">
+        <h2><font color="black"style="font-size:33px">CSS</font></h2>
+        <p>
+            <img src="AI.jpg" width="300px">
+            나는 CSS ㅎㅎ Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Ut nemo blanditiis officia, suscipit illum beatae, 
+            quidem aliquam nostrum corrupti ex commodi inventore quo 
+            ipsa ratione nesciunt magnam quod vel culpa        
+        </p>
+    </div>
+</div>
 </body>
 </html>
