--- a/4.html
+++ b/4.html
@@ -1,11 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WEB1 - HTML</title>
+    <title>WEB1 - need a thing</title>
+    <meta charset="utf-8">
+    <style>
+        body{
+            margin:0;
+        }
+        a{
+            color : black;
+            text-decoration: none;
+        }
+        h1 {
+            font-size : 70px;
+            text-align: center;
+            border-bottom:2px solid gray;
+            margin:0;
+            padding:20px;
+        }
+        #grid ol{
+            border-right:2px solid gray;
+            width:100px;
+            margin:0;
+            padding:32px;
+        }
+        #grid{
+            display: grid;
+            grid-template-columns: 150px 1fr;
+        }
+        #article{
+            padding-left : 25px;
+
+        }
+        #active{
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <h1><a href="index.html">WEB</a></h1>
+<div id="grid">
+    <ol> 
+        <li> <a href="1.html" >HTML</a></li>
+        <li> <a href="2.html"  >CSS</a></li>
+        <li> <a href="3.html">JavaScript</a></li>
+        <li> <a href="4.html"id="active">Readme</a></li>
+    </ol>
+    <div id="article">
+        <h2>HTML 필요한 정보</h2>
+
+    </div>
+</div>
+</body>
+</html>
+
+
+<!-- <!DOCTYPE html>
+<html>
+<head>
+    <title>WEB1 - need a thing</title>
     <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="needthing.html">WEB</a></h1>
+    <h1><a href="index.html">WEB</a></h1>
     <ol> 
         <li> <a href="1.html">HTML</a></li>
         <li> <a href="2.html">CSS</a></li>
@@ -17,4 +74,4 @@
     <p> 
     </p>
 </body>
-</html>
+</html> -->
